Updated version for NL

--- a/LaTeX/schastel_20210602.tex
+++ b/LaTeX/schastel_20210602.tex
@@ -100,7 +100,7 @@
   anchor=north west] {
     \begin{minipage}{1.0\linewidth}
       \large Languages: \textbf{Java}, \textbf{Python}, JavaScript,
-      \textbf{bash}, \textbf{SQL}, C, \textbf{C++}, \LaTeX{}
+      \textbf{bash}, \textbf{SQL}, C, \textbf{C++}, \LaTeX{}, Fortran
 
       Technologies: \textbf{Kubernetes}, \textbf{Docker},
       \textbf{Ceph}, \textbf{HTCondor}, MySQL, PostgreSQL, hg/git
@@ -464,7 +464,7 @@
   anchor=west] at ([xshift=\itemskilljump]item1.east) {
     \begin{minipage}{\expskill}
       UML, \textbf{Java}, \textbf{Python}, XML, XSD/JaxB, Java Web
-      Start, PV-Wave/Jwave, ClearCase, ClearQuest
+      Start, PV-Wave/Jwave (\textbf{Fortran}), ClearCase, ClearQuest
 
       \medskip
       MS Windows 2003/XP32/XP64
