--- a/LaTeX/schastel.tex
+++ b/LaTeX/schastel.tex
@@ -363,7 +363,7 @@
     \begin{minipage}{\expitem}
       Responsible for software development and documentation
       activities for producing an integrated scientific computing
-      framework based on \textbf{machine-learning techniques}
+      framework based on \textbf{machine learning techniques}
     \end{minipage}
   };
   \node (skill1) [rectangle, minimum width=\expskill,
@@ -550,12 +550,9 @@
   at ([xshift=\itemskilljump, yshift=-\itemskilljump]origin.south
   west) {
     \begin{minipage}{\expitem}
-      Design and development of a tool for retinal image analysis
-
       Quantitative performance analysis (algorithmic complexities,
       comparison of various implemented methods, experimental
-      validation against ground truth)
-      
+      validation against ground truth)      
     \end{minipage}
   };
 
